# Sistem-Monitoring-Control-Room-Industri-Oil-and-Gas-dengen-IoT-dan-Blockchain

./: Laporan Tugas 4_Kelompok 6.docx  README.md
Sistem Monitoring dengen Blockchain /frontend-dapp/: package-lock.json  package.json
Sistem Monitoring dengen Blockchain /frontend-dapp/src/: App.js
Sistem Monitoring dengen Blockchain /frontend-dapp/src/abi/: DataRegistry.json
Sistem Monitoring dengen Blockchain /hardhat-sensor-contract/: hardhat.config.js  package-lock.json  package.json
Sistem Monitoring dengen Blockchain /hardhat-sensor-contract/artifacts/contracts/DataRegistry.sol/: DataRegistry.dbg.json  DataRegistry.json
Sistem Monitoring dengen Blockchain /hardhat-sensor-contract/cache/: solidity-files-cache.json
Sistem Monitoring dengen Blockchain /hardhat-sensor-contract/contracts/: DataRegistry.sol
Sistem Monitoring dengen Blockchain /hardhat-sensor-contract/scripts/: deploy.js
Sistem Monitoring dengen Blockchain /qtbaru/: .env  init_db.py  sensor_data.db  tcp_sensor_chart.py
Sistem Monitoring dengen Blockchain /sensor-gateaway/: .gitignore  Cargo.toml  format.json
Sistem Monitoring dengen Blockchain /sensor-gateaway/src/: main.rs
